force-app/main/default/objects/Knowledge__kav/fields/Body_Content__c.field-meta.xml
<CustomField>
    <fullName>Body_Content__c</fullName>
    <label>본문 내용</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>