force-app/main/default/objects/Knowledge__kav/fields/CheckItems__c.field-meta.xml
<CustomField>
    <fullName>CheckItems__c</fullName>
    <label>점검항목</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>