force-app/main/default/objects/Knowledge__kav/fields/Repair__c.field-meta.xml
<CustomField>
    <fullName>Repair__c</fullName>
    <label>수리방법</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>