force-app/main/default/objects/Knowledge__kav/fields/Trouble__c.field-meta.xml
<CustomField>
    <fullName>Trouble__c</fullName>
    <label>증상</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>