force-app/main/default/objects/Knowledge__kav/recordTypes/MaintenanceGuide.recordType-meta.xml
<RecordType>
    <fullName>MaintenanceGuide</fullName>
    <active>true</active>
    <label>정비가이드</label>
</RecordType>