force-app/main/default/objects/Knowledge__kav/recordTypes/Product_Specification.recordType-meta.xml
<RecordType>
    <fullName>Product_Specification</fullName>
    <active>true</active>
    <description>차량제품사양 안내 봇</description>
    <label>제품 사양</label>
</RecordType>