force-app/main/default/objects/Knowledge__kav/listViews/archived_articles.listView-meta.xml
<ListView>
    <fullName>archived_articles</fullName>
    <columns>TITLE</columns>
    <columns>ABSTRACT</columns>
    <columns>ARTICLE_NUMBER</columns>
    <columns>LANGUAGE</columns>
    <filterScope>Everything</filterScope>
    <label>Archived Articles</label>
</ListView>